--- a/index.html
+++ b/index.html
@@ -13,6 +13,32 @@
     <script src="main.js" defer></script>
 </head>
 <body>
-    
+    <!--Navbar  -->
+    <nav id="navbar"></nav>
+    <div class="navbar__logo">
+       <i class="far fa-address-book"></i>
+       <a href="#">Meaya</a>
+    </div>
+    <div>
+        <ul class="navbar__menu">
+            <li class="navbar_menu__item">Home</li>
+            <li class="navbar_menu__item">About</li>
+            <li class="navbar_menu__item">Skill</li>
+            <li class="navbar_menu__item">Work</li>
+            <li class="navbar_menu__item">Testmonial</li>
+            <li class="navbar_menu__item">Contact</li>
+        </ul>
+    </div>
+    <!-- About -->
+    <section id="about"></section>
+    <!-- Skill -->
+    <section id="skill"></section>
+    <!-- Work -->
+    <section id="work"></section>
+    <!-- Testmonial -->
+    <section id="testmonial"></section>
+    <!-- Contact -->
+    <section id="contact"></section>
+    </section>
 </body>
 </html>
