--- a/index.html
+++ b/index.html
@@ -14,21 +14,33 @@
 </head>
 <body>
     <!--Navbar  -->
-    <nav id="navbar"></nav>
-    <div class="navbar__logo">
-       <i class="far fa-address-book"></i>
-       <a href="#">Meaya</a>
-    </div>
-    <div>
-        <ul class="navbar__menu">
-            <li class="navbar_menu__item">Home</li>
-            <li class="navbar_menu__item">About</li>
-            <li class="navbar_menu__item">Skill</li>
-            <li class="navbar_menu__item">Work</li>
-            <li class="navbar_menu__item">Testmonial</li>
-            <li class="navbar_menu__item">Contact</li>
-        </ul>
-    </div>
+    <nav id="navbar">
+        <div class="navbar__logo">
+        <i class="far fa-address-book"></i>
+        <a href="#">Meaya</a>
+        </div>
+        <div>
+            <ul class="navbar__menu">
+                <li class="navbar_menu__item">Home</li>
+                <li class="navbar_menu__item">About</li>
+                <li class="navbar_menu__item">Skill</li>
+                <li class="navbar_menu__item">Work</li>
+                <li class="navbar_menu__item">Testmonial</li>
+                <li class="navbar_menu__item">Contact</li>
+            </ul>
+        </div>
+    </nav>
+    <!-- Home -->
+    <section id="home">
+        <img 
+            src="imgs/myphoto.jpg" 
+            alt="Meaya's profile photo" 
+            class="home__avartar"><br/>
+        <h1 class="home__titile">Welcome <br/> My Home</h1>
+        <h2 class="home__description">I have no idea. What i want to do with this web site</h2>
+        <button class="home__contact">Contact me</button>
+    </section>
+
     <!-- About -->
     <section id="about"></section>
     <!-- Skill -->
