--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             </ul>
         </div>
     </nav>
+
     <!-- Home -->
     <section id="home">
         <img 
@@ -42,7 +43,54 @@
     </section>
 
     <!-- About -->
-    <section id="about"></section>
+    <section id="about">
+        <h1>About Me</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi placeat architecto dolores optio sed non minus cumque, minima officiis. Quidem tenetur magni magnam sit a id sequi, rem modi. Error!
+        </p>
+        <div class="about__majors">
+            <div class="major" >
+                <div class="major__icon">
+                    <i class="fab fa-html5"></i>
+                </div>
+                <div class="major__title">Front-end</div>
+                <div class="major__description">
+                   HTML,CSS,JavaScript,TypeScript
+                   <br />React, Vue, Web APIs
+                </div>
+            </div>
+            <div class="major" >
+                <div class="major__icon">
+                    <i class="fas fa-mobile-alt"></i>
+                </div>
+                <div class="major__title">Mobile</div>
+                <div class="major__description">
+                   Whatever you want
+                </div>
+            </div>
+            <div class="major" >
+                <div class="major__icon">
+                    <i class="fas fa-server"></i>
+                </div>
+                <div class="major__title">Back-end</div>
+                <div class="major__description">
+                   Back end is here
+                </div>
+            </div>
+        </div>
+        <div class="about__jobs">
+            <div class="jobs">
+                <img 
+                    src="imgs/jungbub.jpeg" 
+                    alt="Jungbub" 
+                    class="job__log">
+                <p class="job__name">
+                    Jungbub Mentor
+                </p>
+                <p class="job__period">2016-2020 all jungbub lectures </p>
+            </div>
+        </div>
+    </section>
+
     <!-- Skill -->
     <section id="skill"></section>
     <!-- Work -->
