--- a/index.html
+++ b/index.html
@@ -92,7 +92,63 @@
     </section>
 
     <!-- Skill -->
-    <section id="skill"></section>
+    <section id="skill">
+        <h1>Skill</h1>
+        <h2>Skill & Attribute </h2>
+        <p>Lorem ipsum dolor sit amet.</p>
+
+        <div class="skillset">
+            <div class="skillset__left">
+                <h3 class="skillset__title">Skills</h3>
+                <div class="skill">
+                    <div class="skill__description">
+                        <span>HTML</span>
+                        <span>99%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value"></div>
+                    </div>
+
+                    <div class="skill__description">
+                        <span>CSS</span>
+                        <span>80%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value"></div>
+                    </div>
+
+                    <div class="skill__description">
+                        <span>JavaScript</span>
+                        <span>70%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="skillset__right">
+                <div class="tools">
+                    <h3 class="skillset__title">Tools</h3>
+                    <ul class="tools__list">
+                        <li><span>Visual Studio Code</span></li>
+                        <li><span>Atom</span></li>
+                        <li><span>React</span></li>
+                        <li><span>Android Studio Code</span></li>
+                        <li><span>Sketch app</span></li>
+                    </ul>
+                </div>
+                <div class="etc">
+                    <h3 class="skillset__title">Etc</h3>
+                    <ul class="etc__list">
+                        <li><span>Git</span></li>
+                        <li><span>DMBS- Microsoft Access</span></li>
+                        <li><span>Health Related</span></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Work -->
     <section id="work"></section>
     <!-- Testmonial -->
