--- a/index.html
+++ b/index.html
@@ -150,7 +150,37 @@
     </section>
 
     <!-- Work -->
-    <section id="work"></section>
+    <section id="work">
+        <h1>My Work</h1>
+        <h3>Projects</h3>
+        <div class="work__categories">
+            <button class="category__btn">All<span class="category__count">8
+            </span></button>
+            <button class="category__btn">Front-end<span class="category__count">3
+            </span></button>
+            <button class="category__btn">Back-end<span class="category__count">1
+            </span></button>
+            <button class="category__btn">Mobile<span class="category__count">2
+            </span></button>
+        </div>
+        <div class="work__projects"></div>
+            <a href="youtube.com" class="project" target="blank">
+                <img class="project_img" src="imgs/projects/mobile_resize.jpg" alt="Youtube">
+                <div class="project__description">
+                    <h3>Youtube Site</h3>
+                    <span>Youtube my channel</span>
+                </div>
+            </a>
+
+            <a href="jungbub.com" class="project" target="blank">
+                <img class="project_img" src="imgs/projects/hangmobile_resize.jpg" alt="Jungbub">
+                <div class="project__description">
+                    <h3>Jungbub Site</h3>
+                    <span>Jungbub my channel</span>
+                </div>
+            </a>
+    </section>
+
     <!-- Testmonial -->
     <section id="testmonial"></section>
     <!-- Contact -->
