--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <button class="category__btn">Mobile<span class="category__count">2
             </span></button>
         </div>
-        <div class="work__projects"></div>
+        <div class="work__projects">
             <a href="youtube.com" class="project" target="blank">
                 <img class="project_img" src="imgs/projects/mobile_resize.jpg" alt="Youtube">
                 <div class="project__description">
@@ -179,10 +179,36 @@
                     <span>Jungbub my channel</span>
                 </div>
             </a>
+        </div>
     </section>
 
     <!-- Testmonial -->
-    <section id="testmonial"></section>
+    <section id="testmonial">
+        <h1>Testimonials</h1>
+        <h3>See what they say about me</h3>
+        <div class="testimonials"></div>
+            <div class="testimonial_item">
+                <img 
+                    src="imgs/testimonials/sojisub_resize.jpg" 
+                    alt="Sojisub" 
+                    class="testimonial__avarta">
+                <div class="testimonial__speech-bubble">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <p class="testimonial__name"><a href="">Sojisub</a>Sojisub Company </p>
+                </div>
+                <div class="testimonial_item">
+                    <img 
+                        src="imgs/testimonials/namjuhy_resize.jpg" 
+                        alt="Namjuhy" 
+                        class="testimonial__avarta">
+                    <div class="testimonial__speech-bubble">
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p class="testimonial__name"><a href="">Namjuhy</a>Namjuhy Company </p>
+                    </div>
+            </div>
+            
+            <div class="testimonial_item"></div>
+    </section>
     <!-- Contact -->
     <section id="contact"></section>
     </section>
