--- a/index.html
+++ b/index.html
@@ -209,8 +209,23 @@
             
             <div class="testimonial_item"></div>
     </section>
+
     <!-- Contact -->
-    <section id="contact"></section>
+    <section id="contact">
+        <h1 class="class__title">Let's Talk</h1>
+        <h2 class="class__email">westerneastcenter@gmail.com</h2>
+        <div class="contact__links">
+            <a href="https://github.com/meayasohn/Portfolio" target="_blank">
+                <i class="fas fa-envelope-open-text"></i>
+            </a>
+            <a href="#" target="_blank">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <p class="contact__right">
+                2020 Jungbub Wordbook copy right-All right reserved
+            </p>
+        </div>
+    </section>
     </section>
 </body>
 </html>
