--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div>
             <ul class="navbar__menu">
-                <li class="navbar_menu__item">Home</li>
+                <li class="navbar_menu__item active">Home</li>
                 <li class="navbar_menu__item">About</li>
                 <li class="navbar_menu__item">Skill</li>
                 <li class="navbar_menu__item">Work</li>
