--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
     </section>
 
     <!-- About -->
-    <section id="about">
+    <section id="about" class="section">
         <h1>About Me</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi placeat architecto dolores optio sed non minus cumque, minima officiis. Quidem tenetur magni magnam sit a id sequi, rem modi. Error!
+        <p>my name is meaya. Acupuncturist. Like playing, talking, watching
         </p>
         <div class="about__majors">
             <div class="major" >
                 <div class="major__icon">
                     <i class="fab fa-html5"></i>
                 </div>
-                <div class="major__title">Front-end</div>
+                <h2 class="major__title">Front-end</h2>
                 <div class="major__description">
                    HTML,CSS,JavaScript,TypeScript
                    <br />React, Vue, Web APIs
@@ -62,7 +62,7 @@
                 <div class="major__icon">
                     <i class="fas fa-mobile-alt"></i>
                 </div>
-                <div class="major__title">Mobile</div>
+                <h2 class="major__title">Mobile</h2>
                 <div class="major__description">
                    Whatever you want
                 </div>
@@ -71,7 +71,7 @@
                 <div class="major__icon">
                     <i class="fas fa-server"></i>
                 </div>
-                <div class="major__title">Back-end</div>
+                <h2 class="major__title">Back-end</h2>
                 <div class="major__description">
                    Back end is here
                 </div>
@@ -82,17 +82,31 @@
                 <img 
                     src="imgs/jungbub.jpeg" 
                     alt="Jungbub" 
-                    class="job__log">
-                <p class="job__name">
-                    Jungbub Mentor
-                </p>
-                <p class="job__period">2016-2020 all jungbub lectures </p>
+                    class="job__log"
+                    width="50" height="50">
+                <div class="job__description">
+                    <p class="job__name">
+                        Jungbub Mentor
+                    </p>
+                    <p class="job__period">2016-2020 all jungbub lectures </p>
+                </div>
+                <img 
+                src="imgs/jungbub.jpeg" 
+                alt="Jungbub" 
+                class="job__log"
+                width="50" height="50">
+                <div class="job__description">
+                    <p class="job__name">
+                        Jungbub West US Leader
+                    </p>
+                    <p class="job__period">2019-2020 all jungbub activity </p>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- Skill -->
-    <section id="skill">
+    <section id="skill" class="section">
         <h1>Skill</h1>
         <h2>Skill & Attribute </h2>
         <p>Lorem ipsum dolor sit amet.</p>
@@ -150,7 +164,7 @@
     </section>
 
     <!-- Work -->
-    <section id="work">
+    <section id="work" class="section">
         <h1>My Work</h1>
         <h3>Projects</h3>
         <div class="work__categories">
@@ -183,7 +197,7 @@
     </section>
 
     <!-- Testmonial -->
-    <section id="testmonial">
+    <section id="testmonial" class="section">
         <h1>Testimonials</h1>
         <h3>See what they say about me</h3>
         <div class="testimonials"></div>
@@ -211,7 +225,7 @@
     </section>
 
     <!-- Contact -->
-    <section id="contact">
+    <section id="contact" class="section">
         <h1 class="class__title">Let's Talk</h1>
         <h2 class="class__email">westerneastcenter@gmail.com</h2>
         <div class="contact__links">
