--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </section>
 
     <!-- About -->
-    <section id="about" class="section">
+    <section id="about" class="section section__container">
         <h1>About Me</h1>
         <p>my name is meaya. Acupuncturist. Like playing, talking, watching
         </p>
@@ -107,9 +107,10 @@
 
     <!-- Skill -->
     <section id="skill" class="section">
-        <h1>Skill</h1>
+        <div class="section__container">
+            <h1>Skill</h1>
         <h2>Skill & Attribute </h2>
-        <p>Lorem ipsum dolor sit amet.</p>
+        <p> My job skill are variety and broad</p>
 
         <div class="skillset">
             <div class="skillset__left">
@@ -120,26 +121,25 @@
                         <span>99%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill__value"></div>
+                        <div class="skill__value" style="width:99%;"></div>
                     </div>
-
                     <div class="skill__description">
                         <span>CSS</span>
                         <span>80%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill__value"></div>
+                        <div class="skill__value"style="width:80%;"></div>
                     </div>
-
                     <div class="skill__description">
                         <span>JavaScript</span>
                         <span>70%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill__value"></div>
+                        <div class="skill__value" style="width:70%;"></div>
                     </div>
                 </div>
             </div>
+            
             <div class="skillset__right">
                 <div class="tools">
                     <h3 class="skillset__title">Tools</h3>
@@ -161,6 +161,8 @@
                 </div>
             </div>
         </div>
+        </div>
+        
     </section>
 
     <!-- Work -->
