--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <h1>My Work</h1>
         <h3>Projects</h3>
         <div class="work__categories">
-            <button class="category__btn">All<span class="category__count">8
+            <button class="category__btn active">All<span class="category__count">8
             </span></button>
             <button class="category__btn">Front-end<span class="category__count">3
             </span></button>
@@ -183,7 +183,7 @@
             <a href="youtube.com" class="project" target="blank">
                 <img class="project_img" src="imgs/projects/mobile_resize.jpg" alt="Youtube">
                 <div class="project__description">
-                    <h3>Youtube Site</h3>
+                    <h3>Project 1</h3>
                     <span>Youtube my channel</span>
                 </div>
             </a>
@@ -195,6 +195,44 @@
                     <span>Jungbub my channel</span>
                 </div>
             </a>
+
+            <a href="jungbub.com" class="project" target="blank">
+                <img class="project_img" src="imgs/projects/hangmobile_resize.jpg" alt="Jungbub">
+                <div class="project__description">
+                    <h3> Project 3</h3>
+                    <span>Jungbub my channel</span>
+                </div>
+            </a>
+
+            <a href="youtube.com" class="project" target="blank">
+                <img class="project_img" src="imgs/projects/mobile_resize.jpg" alt="Youtube">
+                <div class="project__description">
+                    <h3>Project 4</h3>
+                    <span>Youtube my channel</span>
+                </div>
+            </a>
+            
+            <a href="youtube.com" class="project" target="blank">
+                <img class="project_img" src="imgs/projects/mobile_resize.jpg" alt="Youtube">
+                <div class="project__description">
+                    <h3>Project 5</h3>
+                    <span>Youtube my channel</span>
+                </div>
+            </a>
+            <a href="youtube.com" class="project" target="blank">
+                <img class="project_img" src="imgs/projects/mobile_resize.jpg" alt="Youtube">
+                <div class="project__description">
+                    <h3>Project 6</h3>
+                    <span>Youtube my channel</span>
+                </div>
+            </a>
+            <a href="youtube.com" class="project" target="blank">
+                <img class="project_img" src="imgs/projects/mobile_resize.jpg" alt="Youtube">
+                <div class="project__description">
+                    <h3>Project 7</h3>
+                    <span>Youtube my channel</span>
+                </div>
+            </a>
         </div>
     </section>
 
@@ -202,7 +240,7 @@
     <section id="testmonial" class="section">
         <h1>Testimonials</h1>
         <h3>See what they say about me</h3>
-        <div class="testimonials"></div>
+        <div class="testimonials">
             <div class="testimonial_item">
                 <img 
                     src="imgs/testimonials/sojisub_resize.jpg" 
@@ -212,18 +250,28 @@
                     <p>Lorem ipsum dolor sit amet.</p>
                     <p class="testimonial__name"><a href="">Sojisub</a>Sojisub Company </p>
                 </div>
-                <div class="testimonial_item">
-                    <img 
-                        src="imgs/testimonials/namjuhy_resize.jpg" 
-                        alt="Namjuhy" 
-                        class="testimonial__avarta">
-                    <div class="testimonial__speech-bubble">
-                        <p>Lorem ipsum dolor sit amet.</p>
-                        <p class="testimonial__name"><a href="">Namjuhy</a>Namjuhy Company </p>
-                    </div>
             </div>
-            
-            <div class="testimonial_item"></div>
+            <div class="testimonial_item">
+                <img 
+                    src="imgs/testimonials/sojisub_resize.jpg" 
+                    alt="Sojisub" 
+                    class="testimonial__avarta">
+                <div class="testimonial__speech-bubble">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <p class="testimonial__name"><a href="">Sojisub</a>Sojisub Company </p>
+                </div>
+            </div>
+            <div class="testimonial_item">
+                <img 
+                    src="imgs/testimonials/sojisub_resize.jpg" 
+                    alt="Sojisub" 
+                    class="testimonial__avarta">
+                <div class="testimonial__speech-bubble">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <p class="testimonial__name"><a href="">Sojisub</a>Sojisub Company </p>
+                </div>
+            </div>
+         </div>
     </section>
 
     <!-- Contact -->
