--- a/index.html
+++ b/index.html
@@ -241,6 +241,29 @@
         <h1>Testimonials</h1>
         <h3>See what they say about me</h3>
         <div class="testimonials">
+
+            <div class="testimonial_item">
+                <img 
+                    src="imgs/testimonials/sojisub_resize.jpg" 
+                    alt="Sojisub" 
+                    class="testimonial__avarta">
+                <div class="testimonial__speech-bubble">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quos sed totam. Earum unde nobis illum adipisci nesciunt, quod inventore! Eius molestiae eum qui veritatis autem dolor voluptatibus facilis labore maxime blanditiis perspiciatis expedita provident illum excepturi atque, ullam in consequatur possimus ipsam assumenda necessitatibus at non suscipit praesentium. Nesciunt.</p>
+                    <p class="testimonial__name"><a href="">Sojisub</a>Sojisub Company </p>
+                </div>
+            </div>
+
+            <div class="testimonial_item">
+                <div class="testimonial__speech-bubble">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad, labore? Molestias consequatur omnis adipisci quia, minus ipsam. Perspiciatis minima laborum rem officiis ab a fugiat! Ipsum numquam quo aliquid, distinctio ad ipsa quidem consectetur voluptatum voluptate molestiae cupiditate odio vero assumenda aliquam! Ea voluptate a expedita recusandae, tempore error corporis.</p>
+                    <p class="testimonial__name"><a href="">Sojisub</a>Sojisub Company </p>
+                </div>
+                <img 
+                    src="imgs/testimonials/sojisub_resize.jpg" 
+                    alt="Sojisub" 
+                    class="testimonial__avarta">
+            </div>
+
             <div class="testimonial_item">
                 <img 
                     src="imgs/testimonials/sojisub_resize.jpg" 
@@ -251,27 +274,7 @@
                     <p class="testimonial__name"><a href="">Sojisub</a>Sojisub Company </p>
                 </div>
             </div>
-            <div class="testimonial_item">
-                <img 
-                    src="imgs/testimonials/sojisub_resize.jpg" 
-                    alt="Sojisub" 
-                    class="testimonial__avarta">
-                <div class="testimonial__speech-bubble">
-                    <p>Lorem ipsum dolor sit amet.</p>
-                    <p class="testimonial__name"><a href="">Sojisub</a>Sojisub Company </p>
-                </div>
-            </div>
-            <div class="testimonial_item">
-                <img 
-                    src="imgs/testimonials/sojisub_resize.jpg" 
-                    alt="Sojisub" 
-                    class="testimonial__avarta">
-                <div class="testimonial__speech-bubble">
-                    <p>Lorem ipsum dolor sit amet.</p>
-                    <p class="testimonial__name"><a href="">Sojisub</a>Sojisub Company </p>
-                </div>
-            </div>
-         </div>
+        </div>
     </section>
 
     <!-- Contact -->
