--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                 </div>
                 <h2 class="major__title">Front-end</h2>
                 <div class="major__description">
-                   HTML,CSS,JavaScript,TypeScript
-                   <br />React, Vue, Web APIs
+                    HTML,CSS,JavaScript,TypeScript
+                    <br/>React, Vue, Web APIs
                 </div>
             </div>
             <div class="major" >
@@ -64,7 +64,7 @@
                 </div>
                 <h2 class="major__title">Mobile</h2>
                 <div class="major__description">
-                   Whatever you want
+                    Whatever you want
                 </div>
             </div>
             <div class="major" >
@@ -73,12 +73,12 @@
                 </div>
                 <h2 class="major__title">Back-end</h2>
                 <div class="major__description">
-                   Back end is here
+                    Back end is here
                 </div>
             </div>
         </div>
         <div class="about__jobs">
-            <div class="jobs">
+            <div class="job">
                 <img 
                     src="imgs/jungbub.jpeg" 
                     alt="Jungbub" 
@@ -86,10 +86,13 @@
                     width="50" height="50">
                 <div class="job__description">
                     <p class="job__name">
-                        Jungbub Mentor
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis ad, doloremque debitis accusantium cupiditate culpa non quos aliquam excepturi dolor.
                     </p>
                     <p class="job__period">2016-2020 all jungbub lectures </p>
                 </div>
+            </div>
+
+            <div class="job">
                 <img 
                 src="imgs/jungbub.jpeg" 
                 alt="Jungbub" 
@@ -97,7 +100,7 @@
                 width="50" height="50">
                 <div class="job__description">
                     <p class="job__name">
-                        Jungbub West US Leader
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo unde architecto laborum ut officiis exercitationem rem ipsa dolores veniam eaque?
                     </p>
                     <p class="job__period">2019-2020 all jungbub activity </p>
                 </div>
@@ -256,7 +259,8 @@
             <div class="testimonial_item">
                 <div class="testimonial__speech-bubble">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad, labore? Molestias consequatur omnis adipisci quia, minus ipsam. Perspiciatis minima laborum rem officiis ab a fugiat! Ipsum numquam quo aliquid, distinctio ad ipsa quidem consectetur voluptatum voluptate molestiae cupiditate odio vero assumenda aliquam! Ea voluptate a expedita recusandae, tempore error corporis.</p>
-                    <p class="testimonial__name"><a href="">Sojisub</a>Sojisub Company </p>
+                    <p class="testimonial__name">
+                        <a href="">Sojisub</a>Sojisub Company </p>
                 </div>
                 <img 
                     src="imgs/testimonials/sojisub_resize.jpg" 
@@ -279,8 +283,8 @@
 
     <!-- Contact -->
     <section id="contact" class="section">
-        <h1 class="class__title">Let's Talk</h1>
-        <h2 class="class__email">westerneastcenter@gmail.com</h2>
+        <h1 class="contact__title">Let's Talk</h1>
+        <h2 class="contact__email">westerneastcenter@gmail.com</h2>
         <div class="contact__links">
             <a href="https://github.com/meayasohn/Portfolio" target="_blank">
                 <i class="fas fa-envelope-open-text"></i>
@@ -288,10 +292,11 @@
             <a href="#" target="_blank">
                 <i class="fab fa-linkedin"></i>
             </a>
-            <p class="contact__right">
-                2020 Jungbub Wordbook copy right-All right reserved
-            </p>
         </div>
+        <p class="contact__rights">
+            2020 Jungbub Wordbook copy right-All right reserved
+        </p>
+
     </section>
     </section>
 </body>
