--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <!--Navbar  -->
     <nav id="navbar">
         <div class="navbar__logo">
-        <i class="far fa-address-book"></i>
-        <a href="#">Meaya</a>
+            <i class="far fa-address-book"></i>
+            <a href="#">Meaya</a>
         </div>
-        <div>
+        <div clase="navbar__menu__block" >
             <ul class="navbar__menu">
                 <li class="navbar_menu__item active">Home</li>
                 <li class="navbar_menu__item">About</li>
@@ -29,6 +29,10 @@
                 <li class="navbar_menu__item">Contact</li>
             </ul>
         </div>
+
+        <button class="navbar__toggle-btn">
+            <i class="fas fa-bars"></i>
+        </button>
     </nav>
 
     <!-- Home -->
@@ -108,7 +112,7 @@
         </div>
     </section>
 
-    
+
     <!-- Skill -->
     <section id="skill" class="section">
         <div class="section__container">
@@ -287,21 +291,19 @@
 
     <!-- Contact -->
     <section id="contact" class="section">
-        <h1 class="contact__title">Let's Talk</h1>
-        <h2 class="contact__email">westerneastcenter@gmail.com</h2>
-        <div class="contact__links">
-            <a href="https://github.com/meayasohn/Portfolio" target="_blank">
-                <i class="fas fa-envelope-open-text"></i>
-            </a>
-            <a href="#" target="_blank">
-                <i class="fab fa-linkedin"></i>
-            </a>
-        </div>
-        <p class="contact__rights">
-            2020 Jungbub Wordbook copy right-All right reserved
-        </p>
-
-    </section>
+            <h1 class="contact__title">Let's Talk</h1>
+            <h2 class="contact__email">westerneastcenter@gmail.com</h2>
+            <div class="contact__links">
+                <a href="https://github.com/meayasohn/Portfolio" target="_blank">
+                    <i class="fas fa-envelope-open-text"></i>
+                </a>
+                <a href="#" target="_blank">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+            </div>
+            <p class="contact__rights">
+                2020 Jungbub Wordbook copy right-All right reserved
+            </p>
     </section>
 </body>
 </html>
