--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         </div>
         <div clase="navbar__menu__block" >
             <ul class="navbar__menu">
-                <li class="navbar_menu__item active">Home</li>
-                <li class="navbar_menu__item">About</li>
-                <li class="navbar_menu__item">Skill</li>
-                <li class="navbar_menu__item">Work</li>
-                <li class="navbar_menu__item">Testmonial</li>
-                <li class="navbar_menu__item">Contact</li>
+                <li class="navbar_menu__item active" data-link="#home">Home</li>
+                <li class="navbar_menu__item" data-link="#about">About</li>
+                <li class="navbar_menu__item" data-link="#skill">Skill</li>
+                <li class="navbar_menu__item" data-link="#work">Work</li>
+                <li class="navbar_menu__item" data-link="#testimonial">Testmonial</li>
+                <li class="navbar_menu__item" data-link="#contact">Contact</li>
             </ul>
         </div>
 
@@ -246,7 +246,7 @@
     </section>
 
     <!-- Testmonial -->
-    <section id="testmonial" class="section">
+    <section id="testimonial" class="section">
         <div class="section__container">
             <h1>Testimonials</h1>
         <h3>See what they say about me</h3>
