--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             class="home__avartar"><br/>
         <h1 class="home__titile">Welcome <br/> My Home</h1>
         <h2 class="home__description">I have no idea. What i want to do with this web site</h2>
-        <button class="home__contact">Contact me</button>
+        <button class="home__contact" data-link="#contact">Contact me</button>
     </section>
 
     <!-- About -->
