--- a/index.html
+++ b/index.html
@@ -305,5 +305,8 @@
                 2020 Jungbub Wordbook copy right-All right reserved
             </p>
     </section>
+
+    <!-- Arrow up -->
+    <button class="arrow__up"><i class="fas fa-arrow-up"></i></button>
 </body>
 </html>
