--- a/index.html
+++ b/index.html
@@ -178,17 +178,17 @@
             <h1>My Work</h1>
             <h3>Projects</h3>
             <div class="work__categories">
-                <button class="category__btn active">All<span class="category__count">8
+                <button class="category__btn active" data-job="*">All<span class="category__count">8
                 </span></button>
-                <button class="category__btn">Front-end<span class="category__count">3
+                <button class="category__btn" data-job="front">Front-end<span class="category__count">3
                 </span></button>
-                <button class="category__btn">Back-end<span class="category__count">1
+                <button class="category__btn" data-job="end">Back-end<span class="category__count">1
                 </span></button>
-                <button class="category__btn">Mobile<span class="category__count">2
+                <button class="category__btn" data-job="mobile">Mobile<span class="category__count">2
                 </span></button>
             </div>
             <div class="work__projects">
-                <a href="youtube.com" class="project" target="blank">
+                <a href="youtube.com" class="project" data-job="front" target="blank">
                     <img class="project_img" src="imgs/projects/mobile_resize.jpg" alt="Youtube">
                     <div class="project__description">
                         <h3>Project 1</h3>
@@ -196,7 +196,7 @@
                     </div>
                 </a>
 
-                <a href="jungbub.com" class="project" target="blank">
+                <a href="jungbub.com" class="project" data-job="front" target="blank">
                     <img class="project_img" src="imgs/projects/hangmobile_resize.jpg" alt="Jungbub">
                     <div class="project__description">
                         <h3>Jungbub Site</h3>
@@ -204,7 +204,7 @@
                     </div>
                 </a>
 
-                <a href="jungbub.com" class="project" target="blank">
+                <a href="jungbub.com" class="project" data-job="end" target="blank">
                     <img class="project_img" src="imgs/projects/hangmobile_resize.jpg" alt="Jungbub">
                     <div class="project__description">
                         <h3> Project 3</h3>
@@ -212,7 +212,7 @@
                     </div>
                 </a>
 
-                <a href="youtube.com" class="project" target="blank">
+                <a href="youtube.com" class="project" data-job="front" target="blank">
                     <img class="project_img" src="imgs/projects/mobile_resize.jpg" alt="Youtube">
                     <div class="project__description">
                         <h3>Project 4</h3>
@@ -220,21 +220,21 @@
                     </div>
                 </a>
                 
-                <a href="youtube.com" class="project" target="blank">
+                <a href="youtube.com" class="project" data-job="front" target="blank">
                     <img class="project_img" src="imgs/projects/mobile_resize.jpg" alt="Youtube">
                     <div class="project__description">
                         <h3>Project 5</h3>
                         <span>Youtube my channel</span>
                     </div>
                 </a>
-                <a href="youtube.com" class="project" target="blank">
+                <a href="youtube.com" class="project" data-job="end" target="blank">
                     <img class="project_img" src="imgs/projects/mobile_resize.jpg" alt="Youtube">
                     <div class="project__description">
                         <h3>Project 6</h3>
                         <span>Youtube my channel</span>
                     </div>
                 </a>
-                <a href="youtube.com" class="project" target="blank">
+                <a href="youtube.com" class="project" data-job="mobile" target="blank">
                     <img class="project_img" src="imgs/projects/mobile_resize.jpg" alt="Youtube">
                     <div class="project__description">
                         <h3>Project 7</h3>
