--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div clase="navbar__menu__block" >
             <ul class="navbar__menu">
-                <li class="navbar_menu__item active" data-link="#home">Home</li>
+                <li class="navbar_menu__item" data-link="#home">Home</li>
                 <li class="navbar_menu__item" data-link="#about">About</li>
                 <li class="navbar_menu__item" data-link="#skill">Skill</li>
                 <li class="navbar_menu__item" data-link="#work">Work</li>
@@ -178,7 +178,7 @@
             <h1>My Work</h1>
             <h3>Projects</h3>
             <div class="work__categories">
-                <button class="category__btn active" data-job="*">All<span class="category__count">8
+                <button class="category__btn selected" data-job="*">All<span class="category__count">8
                 </span></button>
                 <button class="category__btn" data-job="front">Front-end<span class="category__count">3
                 </span></button>
