JS: Final Touch

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="#">Meaya</a>
         </div>
         <div clase="navbar__menu__block" >
-            <ul class="navbar__menu">
+            <ul class="navbar__menu open">
                 <li class="navbar_menu__item" data-link="#home">Home</li>
                 <li class="navbar_menu__item" data-link="#about">About</li>
                 <li class="navbar_menu__item" data-link="#skill">Skill</li>
