JS: Final Touch-2

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Jungbub Wordbook</title>
+    <title>Meaya's Portpolio</title>
     <meta name="description" content="Learn jungbub word in English"/>
     <meta name='author' content="Meaya">
     <link rel="icon" type="image/png" href="imgs/favicon.png"/>
@@ -41,15 +41,15 @@
             src="imgs/myphoto.jpg" 
             alt="Meaya's profile photo" 
             class="home__avartar"><br/>
-        <h1 class="home__titile">Welcome <br/> My Home</h1>
-        <h2 class="home__description">I have no idea. What i want to do with this web site</h2>
+        <h1 class="home__titile">Welcome <br/> Meaya's Portfolio</h1>
+        <h2 class="home__description">This is web site of my work history</h2>
         <button class="home__contact" data-link="#contact">Contact me</button>
     </section>
 
     <!-- About -->
     <section id="about" class="section section__container">
         <h1>About Me</h1>
-        <p>my name is meaya. Acupuncturist. Like playing, talking, watching
+        <p>My name is meaya. Programmer, and Acupuncturist
         </p>
         <div class="about__majors">
             <div class="major" >
@@ -59,7 +59,7 @@
                 <h2 class="major__title">Front-end</h2>
                 <div class="major__description">
                     HTML,CSS,JavaScript,TypeScript
-                    <br/>React, Vue, Web APIs
+                    <br/>React, Vue, Web APIs, jQuery
                 </div>
             </div>
             <div class="major" >
@@ -68,7 +68,7 @@
                 </div>
                 <h2 class="major__title">Mobile</h2>
                 <div class="major__description">
-                    Whatever you want
+                    Embedded Programming, App program
                 </div>
             </div>
             <div class="major" >
@@ -77,36 +77,64 @@
                 </div>
                 <h2 class="major__title">Back-end</h2>
                 <div class="major__description">
-                    Back end is here
+                    PHP, JAVA
                 </div>
             </div>
         </div>
         <div class="about__jobs">
             <div class="job">
                 <img 
-                    src="imgs/jungbub.jpeg" 
+                    src="imgs/parklaw.png" 
                     alt="Jungbub" 
                     class="job__log"
-                    width="50" height="50">
+                    width="100" height="100">
                 <div class="job__description">
                     <p class="job__name">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis ad, doloremque debitis accusantium cupiditate culpa non quos aliquam excepturi dolor.
+                        Legal office assistance
                     </p>
-                    <p class="job__period">2016-2020 all jungbub lectures </p>
+                    <p class="job__period">2016-2020 Park law firm  </p>
                 </div>
             </div>
 
             <div class="job">
                 <img 
-                src="imgs/jungbub.jpeg" 
-                alt="Jungbub" 
+                src="imgs/no-image.png" 
+                alt="office manager" 
                 class="job__log"
-                width="50" height="50">
+                width="100" height="100">
                 <div class="job__description">
                     <p class="job__name">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo unde architecto laborum ut officiis exercitationem rem ipsa dolores veniam eaque?
+                        Production Manager
                     </p>
-                    <p class="job__period">2019-2020 all jungbub activity </p>
+                    <p class="job__period">2014-2015 Montue Cloth company  </p>
+                </div>
+            </div>
+
+            <div class="job">
+                <img 
+                src="imgs/lim-acupuncture.png" 
+                alt="office manager" 
+                class="job__log"
+                width="100" height="100">
+                <div class="job__description">
+                    <p class="job__name">
+                        Office Manager
+                    </p>
+                    <p class="job__period">2011-2013 LIM acupuncture and herbs clinic </p>
+                </div>
+            </div>
+
+            <div class="job">
+                <img 
+                src="imgs/samsung.png" 
+                alt="Jungbub" 
+                class="job__log"
+                width="100" height="100">
+                <div class="job__description">
+                    <p class="job__name">
+                        Embedded Prgrammer
+                    </p>
+                    <p class="job__period">2001-2007 Samsung Eletronics </p>
                 </div>
             </div>
         </div>
@@ -258,16 +286,16 @@
                     alt="Sojisub" 
                     class="testimonial__avarta">
                 <div class="testimonial__speech-bubble">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quos sed totam. Earum unde nobis illum adipisci nesciunt, quod inventore! Eius molestiae eum qui veritatis autem dolor voluptatibus facilis labore maxime blanditiis perspiciatis expedita provident illum excepturi atque, ullam in consequatur possimus ipsam assumenda necessitatibus at non suscipit praesentium. Nesciunt.</p>
-                    <p class="testimonial__name"><a href="">Sojisub</a>Sojisub Company </p>
+                    <p>work hard, always gentle</p>
+                    <p class="testimonial__name"><a href="">Alex</a> Italee optics</p>
                 </div>
             </div>
 
             <div class="testimonial_item">
                 <div class="testimonial__speech-bubble">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad, labore? Molestias consequatur omnis adipisci quia, minus ipsam. Perspiciatis minima laborum rem officiis ab a fugiat! Ipsum numquam quo aliquid, distinctio ad ipsa quidem consectetur voluptatum voluptate molestiae cupiditate odio vero assumenda aliquam! Ea voluptate a expedita recusandae, tempore error corporis.</p>
+                    <p>우리가 함께 하는 시간은 언제나 즐거웠다. 힘든 시간을 함께 할 수 있어서 언제나 든든했다.</p>
                     <p class="testimonial__name">
-                        <a href="">Sojisub</a>Sojisub Company </p>
+                        <a href="">Jia</a> Acupuncture Love Clinic </p>
                 </div>
                 <img 
                     src="imgs/testimonials/sojisub_resize.jpg" 
@@ -275,16 +303,6 @@
                     class="testimonial__avarta">
             </div>
 
-            <div class="testimonial_item">
-                <img 
-                    src="imgs/testimonials/sojisub_resize.jpg" 
-                    alt="Sojisub" 
-                    class="testimonial__avarta">
-                <div class="testimonial__speech-bubble">
-                    <p>Lorem ipsum dolor sit amet.</p>
-                    <p class="testimonial__name"><a href="">Sojisub</a>Sojisub Company </p>
-                </div>
-            </div>
         </div>
         </div>
     </section>
